# deep_learning_intro

./: backpropagation.py  main.py  pyproject.toml
