[project]
name = "deep-learning-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.14",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "playwright>=1.61.0",
    "scikit-learn>=1.9.0",
]
